test_suite/tests/ui/string/derive/unknown_trait.rs
use nutype::nutype;

#[nutype(sanitize(trim))]
#[derive(Debug, Clone, Bingo, PartialEq)]
struct Name(String);

fn main() {}
